# cpp_course

./: .gitignore
homework-solutions-2/: CMakeLists.txt  environment.yml
homework-solutions-2/src/: CMakeLists.txt  casting.cpp  doubly_linked_list.h  pointer_arithmetics.cpp
homework-solutions-2/tests/: CMakeLists.txt  test_doubly_linked_list.cpp
homework-solutions-3/: CMakeLists.txt
homework-solutions-3/src/: CMakeLists.txt  student_class.h
homework-solutions-3/tests/: CMakeLists.txt  test_student.cpp
homework-solutions-4/: CMakeLists.txt  environment.yml
homework-solutions-4/docs/: CMakeLists.txt  Doxyfile.in
homework-solutions-4/docs/source/: conf.py  index.rst
homework-solutions-4/include/: dynamic_array.h  person.h  student_class.h
homework-solutions-4/src/: CMakeLists.txt  dynamic_array.cpp  person.cpp  student_class.cpp
homework-solutions-4/tests/: CMakeLists.txt  test_dynamic_array.cpp  test_student.cpp
homework-solutions-5/: CMakeLists.txt
homework-solutions-5/docs/: CMakeLists.txt
homework-solutions-5/docs/source/: conf.py  index.rst
homework-solutions-5/include/: expression.h
homework-solutions-5/src/: CMakeLists.txt  expression.cpp
homework-solutions-5/tests/: CMakeLists.txt  test_expression.cpp
homework-solutions-6/: debugging_codes.cpp  file_handling.cpp  infinite_loop.cpp  resource_class.cpp
homework-solutions-7/docs/source/: conf.py  index.rst
homework-solutions-7/include/: flexible_container.h  is_raw_pointer.h  mytype.h  pair.h  split.h  sum.h  transform.h
homework-solutions-7/src/: CMakeLists.txt  mytype.cpp  split.cpp
homework-solutions-7/tests/: CMakeLists.txt  test_flexible_container.cpp  test_is_raw_pointer.cpp  test_mytype.cpp  test_pair.cpp  test_split.cpp  test_sum.cpp  test_transform.cpp
homework-solutions-8/: CMakeLists.txt  README.md  environment.yml  old_text.txt
homework-solutions-8/docs/: Doxyfile.in
homework-solutions-8/docs/source/: index.rst
homework-solutions-8/include/: zipfs.h
homework-solutions-8/src/: CMakeLists.txt  main_zipfs_algorithms.cpp  main_zipfs_containers.cpp  plotting.py
homework-solutions-8/tests/: CMakeLists.txt  test_zipfs.cpp
